nix-compat-derive-tests/tests/ui/parse_bad_version.stderr
error: expected nix attribute version to be string
 --> tests/ui/parse_bad_version.rs:5:21
  |
5 |     #[nix(version = 12)]
  |                     ^^
